--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ padding: 20px;
             
 }
 
+.navbar :where(#menu-close-button, #menu-open-button) {
+  display: none;
+}
+
+/*Hero section styling */
 .hero-section {
 min-height: 100vh;
 backgraound: var(primary-color);
@@ -149,16 +154,105 @@ gap: 23px;
  transition: 0.3s ease;           
 }
 
-.hero-section .hero-details .botton:hover {
+.hero-section .hero-details .botton:hover,
+ .hero-section .hero-details .contact-us { 
 color: var(white-color);
 border-color: var(white-color);
 background: transparent;            
 }
 
+.hero-section .hero-details .
+contact-us:hover { 
+  color: var(primary-color);
+  border-color: var(secondary-color);
+  background: var(secondary-color);
+}
             
 .hero-section .hero-image-wrapper {
  max-width: 500%;
  margin-right:30px;
+}
+
+/* Responsive media query code for max width 900px */
+@media screen and (max-width: 900px) {
+   :root }
+  font-size-m: 1rem;
+  font-size-l: 1.5rem;
+  font-size-xl: 1.5rem;
+  font-size-xxl: 1.8rem; 
+}
+
+body.show-mobile-menu header::before {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.2);
+}
+
+
+.navbar :where(#menu-close-button, #menu-open-button) {
+  display: block;
+  font-size: var(font-size-1);
+}
+
+.navbar #menu-close-button {
+  position:absolute;
+  right: 30px;
+  top: 30px;
+}
+.navbar #menu-open-button {
+ color: var(white-color);
+}
+
+  .navbar .nav-menu {
+   display: block;
+    position: fixed;
+    left: -300px;
+    top: 0;
+    width: 300px;
+    height: 100%;
+    background: var(white-color);
+    transition: left 0.2s ease;
+  }
+
+body.show-mobile-menu .navbar .nav-menu {
+  left: 0;
+}
+
+
+  .navbar .nav-menu .nav-link {
+  color: var(dark color);
+  display: block;
+  margin-top: 17px;
+  font-size: var(font-size-1);
+  }
+
+.hero-section .section-content {
+  gap: 50px;
+  text-align: center;
+  padding: 30px 20px 20px;
+  flex-direction: column-reverse;
+  justify-content: center;
+}
+
+.hero-section .hero-details :is(.subtitle, .description) {
+  max-width: 100%;
+}
+
+.hero-section .hero-details .buttons {
+  justify-content: center;
+}
+
+.hero-section .hero-image-wrapper {
+  max-width: 270px;
+  margin-right: 0;
+}
+
+  
 }
             
  
